maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:88: error: method switcher has return statement; needs result type
    } else { pickupBaggle(); return (); }
                             ^